--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <section class="header">
 <nav>
-	<a href="index.html"><img src="images/logo.png"></a>
+	<a href="https://itztusharb.github.io/login/"><img src="images/logo.png"></a>
 	<div class="nav-links">
 		<ul>
 			<li><a href="index.html">Home</a></li>
