Changes using codespace

--- a/coupon.html
+++ b/coupon.html
@@ -126,6 +126,37 @@
   </div>
   </div>
 
+  <div class="coupon7">
+    <div class="left7">
+      <div>Enjoy Your Gift</div>
+    </div>
+    <div class="center7">
+      <div>
+        <h2>Game night :)</h2>
+        <h3>Coupon</h3>
+        <small>Valid for lifetime</small>
+      </div>
+    </div>
+    <div class="right7">
+      <div>6969696969</div>
+    </div>
+    </div>
+    
+    <div class="coupon8">
+      <div class="left8">
+        <div>Enjoy Your Gift</div>
+      </div>
+      <div class="center8">
+        <div>
+          <h2>Long Drive <br>at night</h2>
+          <h3>Coupon</h3>
+          <small>Valid for lifetime</small>
+        </div>
+      </div>
+      <div class="right8">
+        <div>6969696969</div>
+      </div>
+      </div>
 </section>
 </body>
 </html>
