--- a/coupon.html
+++ b/coupon.html
@@ -17,10 +17,7 @@
 	<a href="index.html"><img src="images/logo.png"></a>
 	<div class="nav-links">
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About Us</a></li>
-			<li><a href="calender.html">Calender</a></li>
-			<li><a href="gallery.html">Gallery</a></li>
+			<li><a href="https://itztusharb.github.io/ily/">Next</a></li>
 		</ul>
 	</div>	
 </nav>
