--- a/calender.html
+++ b/calender.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> Calender </title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style/calender.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -24,12 +24,14 @@
 		</ul>
 	</div>	
 </nav>
-<div align="left" class="calender">
-<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Asia%2FKolkata&bgcolor=%23ffffff&showCalendars=0&showTitle=0&src=OGEwMGUyYzI5ZTVhYjBmZTZlZjI2OWUzNmIwYjkxYWY0YjY0ZTc4NjY2YmQ1ZWUzNjViZjc5MTY0N2M3M2Q4ZkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F6BF26" style="border:solid 1px #777" width="1080" height="590" frameborder="0" scrolling="no"></iframe>
+<div class="content">
+<div class="calender">
+<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Asia%2FKolkata&bgcolor=%23ffffff&showCalendars=0&showTitle=0&src=OGEwMGUyYzI5ZTVhYjBmZTZlZjI2OWUzNmIwYjkxYWY0YjY0ZTc4NjY2YmQ1ZWUzNjViZjc5MTY0N2M3M2Q4ZkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F6BF26" style="border:solid 1px #777" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div class="pic">
 	<img src="images/list.png">
+</div>
 </div>
 </section>
 </body>
