--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> About Us </title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style/about.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -24,12 +24,16 @@
 		</ul>
 	</div>	
 </nav>
-<div class="aboutus">
-<h1> About Us </h1>
-<p1>Hi! The couple: Tushar and his pretty girlfriend Drishty :). We met on 9th August on Instagram and now we love each other soo much💖. Stay tuned for our marriage date soon :) (Maybe next 10-15 years)</p1> 
-</div>
-<div class="about">
-<img src="images/about.png">
+<div class="flexi">
+	<div class="aboutus">
+		<h1> About Us </h1>
+	</div>
+	<div class="about">
+		<img src="images/about.png">
+	</div>
+	<div class="para">
+		<p1>Hi! The couple: Tushar and his pretty girlfriend Drishty :). We met on 9th August on Instagram and now we love each other soo much💖. Stay tuned for our marriage date soon :) (Maybe next 10-15 years)</p1> 
+	</div>
 </div>
 </section>
 </body>
